--- a/.github/workflows/isort.yml
+++ b/.github/workflows/isort.yml
@@ -36,6 +36,7 @@ jobs:
             setup.py \
             nilearn/connectome \
             nilearn/de* \
+            nilearn/glm \
             nilearn/image \
             nilearn/mass_univariate \
             nilearn/regions \
