--- a/.github/workflows/isort.yml
+++ b/.github/workflows/isort.yml
@@ -39,4 +39,5 @@ jobs:
             nilearn/image \
             nilearn/mass_univariate \
             nilearn/regions \
+            nilearn/surface \
             nilearn/*.py
