--- a/.github/workflows/codespell.yml
+++ b/.github/workflows/codespell.yml
@@ -18,5 +18,4 @@ jobs:
         run: |
           pip install codespell tomli
       - name: Check spelling
-        run: |
-          codespell --config pyproject.toml
+        run: codespell
