Revert "Fix codespell Action"
This reverts commit 431e8a5a72fd3276c074f426f4df8a7153779085.

--- a/.github/workflows/codespell.yml
+++ b/.github/workflows/codespell.yml
@@ -14,8 +14,4 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Install dependencies
-        run: |
-          pip install codespell tomli
-      - name: Check spelling
-        run: codespell
+      - uses: codespell-project/actions-codespell@master
