--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -44,6 +44,7 @@ jobs:
             nilearn/connectome \
             nilearn/de* \
             nilearn/image \
+            nilearn/interfaces \
             nilearn/mass_univariate \
             nilearn/regions \
             nilearn/*.py
