--- a/setup.cfg
+++ b/setup.cfg
@@ -96,6 +96,8 @@ max_function_length = 150
 	# W504: line break after binary operator
 per-file-ignores =
 	setup.py: D100
+	*/__init__.py: D104
+	*/*/__init__.py: D104
     # - docstrings rules that should not be applied to tests
 	*/tests/*: D100, D103, D104, D205, D400, D401
 	*/*/tests/*: D100, D103, D104, D205, D400, D401
