--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -45,6 +45,7 @@ jobs:
             nilearn/de* \
             nilearn/image \
             nilearn/input_data \
+            nilearn/maskers \
             nilearn/mass_univariate \
             nilearn/regions \
             nilearn/*.py
