--- a/.github/workflows/isort.yml
+++ b/.github/workflows/isort.yml
@@ -38,6 +38,7 @@ jobs:
             nilearn/de* \
             nilearn/image \
             nilearn/input_data \
+            nilearn/maskers \
             nilearn/mass_univariate \
             nilearn/regions \
             nilearn/*.py
