--- a/setup.cfg
+++ b/setup.cfg
@@ -97,8 +97,8 @@ max_function_length = 150
 per-file-ignores =
 	setup.py: D100
     # - docstrings rules that should not be applied to tests
-	*/tests/*: D100, D103, D104, D205, D400, D401
-	*/*/tests/*: D100, D103, D104, D205, D400, D401
+	*/tests/*: D100, D101, D102, D103, D104, D205, D400, D401
+	*/*/tests/*: D100, D101, D102, D103, D104, D205, D400, D401
     # - docstrings rules that should not be applied to examples
 	examples/*/*: D103, D205, D301, D400
     # - docstrings rules that should not be applied to doc
