--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -40,11 +40,5 @@ jobs:
           flake8 --config=setup.cfg --verbose \
             examples/0[0234567]* \
             maint_tools \
-            setup.py \
-            nilearn/connectome \
-            nilearn/de* \
-            nilearn/image \
-            nilearn/input_data \
-            nilearn/mass_univariate \
-            nilearn/regions \
-            nilearn/*.py
+            nilearn \
+            setup.py
