--- a/.github/workflows/isort.yml
+++ b/.github/workflows/isort.yml
@@ -29,15 +29,8 @@ jobs:
           python -m pip install --upgrade pip isort
 
       - name: "Run isort"
-        run: |
-          isort --diff --check --settings-path pyproject.toml \
+        run: isort --diff --check --settings-path pyproject.toml \
             examples/0[0234567]* \
             maint_tools \
-            setup.py \
-            nilearn/connectome \
-            nilearn/de* \
-            nilearn/image \
-            nilearn/input_data \
-            nilearn/mass_univariate \
-            nilearn/regions \
-            nilearn/*.py
+            nilearn \
+            setup.py
