[MAINT] Format nilearn/interfaces: apply isort and fix flake8 errors (#3647)
* apply isort

* apply pyugrade

* apply flynt

* update CI

* fix flake8

--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -44,6 +44,7 @@ jobs:
             nilearn/connectome \
             nilearn/de* \
             nilearn/image \
+            nilearn/interfaces \
             nilearn/input_data \
             nilearn/maskers \
             nilearn/mass_univariate \
