--- a/.github/workflows/isort.yml
+++ b/.github/workflows/isort.yml
@@ -37,6 +37,7 @@ jobs:
             nilearn/connectome \
             nilearn/de* \
             nilearn/image \
+            nilearn/interfaces \
             nilearn/input_data \
             nilearn/maskers \
             nilearn/mass_univariate \
