[MAINT] Format nilearn/glm: apply isort and fix flake8 errors (#3640)
* apply isort

* apply pyupgrade

* apply flynt

* use vulture

* update CI

* flake8 fic

* fix flake8

* use isort

* Apply suggestions from code review

Co-authored-by: Gensollen <nicolas.gensollen@gmail.com>

* Apply suggestions from code review

Co-authored-by: Yasmin <63292494+ymzayek@users.noreply.github.com>

* update docstring

* update doc string

* rm noqa

* rm noqa

---------

Co-authored-by: Gensollen <nicolas.gensollen@gmail.com>
Co-authored-by: Yasmin <63292494+ymzayek@users.noreply.github.com>

--- a/.github/workflows/isort.yml
+++ b/.github/workflows/isort.yml
@@ -36,6 +36,7 @@ jobs:
             setup.py \
             nilearn/connectome \
             nilearn/de* \
+            nilearn/glm \
             nilearn/image \
             nilearn/interfaces \
             nilearn/input_data \
