--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -80,13 +80,8 @@ jobs:
   - script: |
       set -e
       pip install dist/nilearn-*-py3-none-any.whl
-      python -c "from nilearn.tests.test_package_installation import test_required_package_installation as test_pkg; test_pkg()"
-    displayName: 'Install Nilearn from wheel & check required package installation'
-
-  - script: |
-      set -e
-      python -c "from nilearn.tests.test_package_installation import test_required_package_installation as test_pkg; test_pkg()"
-    displayName: 'Test required package installation'
+      python -c "import nilearn"
+    displayName: 'Install Nilearn from wheel & check installation'
 
 
 - job: 'test_installing_on_macos'
@@ -118,13 +113,8 @@ jobs:
   - script: |
       set -e
       pip install dist/nilearn-*-py3-none-any.whl
-      python -c "from nilearn.tests.test_package_installation import test_required_package_installation as test_pkg; test_pkg()"
-    displayName: 'Install Nilearn from wheel & check required package installation'
-
-  - script: |
-      set -e
-      python -c "from nilearn.tests.test_package_installation import test_required_package_installation as test_pkg; test_pkg()"
-    displayName: 'Test required package installation'
+      python -c "import nilearn"
+    displayName: 'Install Nilearn from wheel & check installation'
 
 
 - job: 'test_installing_on_windows'
@@ -161,8 +151,8 @@ jobs:
 
   - script: |
       :; set -o errexit
-      python -c "from nilearn.tests.test_package_installation import test_required_package_installation as test_pkg; test_pkg()"
-    displayName: 'Test that required package are installed'
+      python -c "import nilearn"
+    displayName: 'Test that installation succeeded'
 
 
 - job: 'test_expected_to_fail_installation_on_linux'
