--- a/.github/workflows/isort.yml
+++ b/.github/workflows/isort.yml
@@ -42,5 +42,6 @@ jobs:
             nilearn/input_data \
             nilearn/maskers \
             nilearn/mass_univariate \
+            nilearn/plotting \
             nilearn/regions \
             nilearn/*.py
