--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ include = """
   | setup.py
   | nilearn/connectome/.*py
   | nilearn/dec.*
+  | nilearn/glm/.*py
   | nilearn/image/.*py
   | nilearn/input_data/.*py
   | nilearn/mass_univariate/.*py
@@ -37,6 +38,11 @@ extend-exclude =  '''
   | examples/.*/.*surf_stat_map.py
   | examples/.*/.*surface_bids_analysis.py
   | examples/.*/.*surface_projection_strategies.py
+  | nilearn/glm/contrasts.py
+  | nilearn/glm/first_level/first_level.py
+  | nilearn/glm/tests/test_contrasts.py
+  | nilearn/glm/tests/test_first_level.py
+  | nilearn/glm/tests/test_second_level.py
 )
 '''
 
