[DATALAD] Recorded changes

--- a/setup.cfg
+++ b/setup.cfg
@@ -77,7 +77,7 @@ exclude =
     build,
     dist,
 	nilearn/externals/tempita
---select = D,E,F,W,C90
+--select = D,E,F,W,C
 docstring-convention = numpy
 max-line-length = 79
 max_complexity = 34
