--- a/setup.cfg
+++ b/setup.cfg
@@ -119,5 +119,5 @@ addopts =
 	--durations=0
 
 [codespell]
-skip = ./.git,plotly-gl3d-latest.min.js,jquery.min.js,localizer_behavioural.tsv,.mypy_cache,env,venv
+skip = ./.git,plotly-gl3d-latest.min.js,jquery.min.js,localizer_behavioural.tsv,.mypy_cache,env,venv,auto_examples
 ignore-words = .github/codespell_ignore_words.txt
