[MAINT] Format nilearn/surface: apply isort and fix flake8 errors (#3645)
* apply isort

* remove dead code

* apply flynt

* fix flake8 errors

* move imports

--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -49,4 +49,5 @@ jobs:
             nilearn/maskers \
             nilearn/mass_univariate \
             nilearn/regions \
+            nilearn/surface \
             nilearn/*.py
