--- a/.github/workflows/isort.yml
+++ b/.github/workflows/isort.yml
@@ -42,4 +42,5 @@ jobs:
             nilearn/maskers \
             nilearn/mass_univariate \
             nilearn/regions \
+            nilearn/surface \
             nilearn/*.py
