--- a/pyproject.toml
+++ b/pyproject.toml
@@ -166,6 +166,9 @@ minversion = "6.0"
 addopts = "--doctest-modules -s -vv --durations=0"
 doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"
 junit_family = "xunit2"
+pytest_plugins = [
+    "nilearn.plotting.tests.test_img_plotting._utils",
+]
 
 [tool.codespell]
 skip = "./.git,plotly-gl3d-latest.min.js,jquery.min.js,localizer_behavioural.tsv,.mypy_cache,env,venv"
