[MAINT] Format reporting (#3615)
* dsm update config

* dsm update config

* fix flake 8 errors

* sourcery refactoring

* [DATALAD] Recorded changes

* Apply suggestions from code review

Co-authored-by: Yasmin <63292494+ymzayek@users.noreply.github.com>
Co-authored-by: Gensollen <nicolas.gensollen@gmail.com>

* balck

* skip test if no matplotlib

* rm noqa

* Apply suggestions from code review

Co-authored-by: Yasmin <63292494+ymzayek@users.noreply.github.com>

* update CI and fix isort

* fix flake8

---------

Co-authored-by: Yasmin <63292494+ymzayek@users.noreply.github.com>
Co-authored-by: Gensollen <nicolas.gensollen@gmail.com>

--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -49,5 +49,6 @@ jobs:
             nilearn/maskers \
             nilearn/mass_univariate \
             nilearn/regions \
+            nilearn/reporting \
             nilearn/surface \
             nilearn/*.py
