--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -31,6 +31,7 @@ files: |
         | nilearn/image/.*py
         | nilearn/input_data/.*py
         | nilearn/regions.*py
+        | nilearn/reporting/.*py
         | nilearn/mass_univariate/.*py
     )$
 
@@ -54,6 +55,9 @@ exclude: |
         | examples/.*/.*surf_stat_map.py
         | examples/.*/.*surface_bids_analysis.py
         | examples/.*/.*surface_projection_strategies.py
+        | nilearn/reporting/data/html/report_body_template_niftispheresmasker.html
+        | nilearn/reporting/html_report.py
+        | nilearn/reporting/tests/test_html_report.py
         | nilearn/externals/tempita
         | nilearn/glm/contrasts.py
         | nilearn/glm/first_level/first_level.py
