--- a/pyproject.toml
+++ b/pyproject.toml
@@ -113,6 +113,7 @@ include = """
   | nilearn/input_data/.*py
   | nilearn/mass_univariate/.*py
   | nilearn/regions/.*py
+  | nilearn/reporting/.*py
   | nilearn/signal.py
   | nilearn/masking.py
   | nilearn/conftest.py
@@ -139,6 +140,9 @@ extend-exclude =  """
   | examples/.*/.*surf_stat_map.py
   | examples/.*/.*surface_bids_analysis.py
   | examples/.*/.*surface_projection_strategies.py
+  | nilearn/reporting/data/html/report_body_template_niftispheresmasker.html
+  | nilearn/reporting/html_report.py
+  | nilearn/reporting/tests/test_html_report.py
   | nilearn/glm/contrasts.py
   | nilearn/glm/first_level/first_level.py
   | nilearn/glm/tests/test_contrasts.py
@@ -156,6 +160,7 @@ src_paths = [
   'nilearn/image/.*py',
   'nilearn/mass_univariate/.*py',
   'nilearn/regions/.*py',
+  'nilearn/reporting/.*py'
 ]
 line_length = 79
 skip_gitignore = true
