--- a/.github/workflows/isort.yml
+++ b/.github/workflows/isort.yml
@@ -42,5 +42,6 @@ jobs:
             nilearn/maskers \
             nilearn/mass_univariate \
             nilearn/regions \
+            nilearn/rerporting \
             nilearn/surface \
             nilearn/*.py
