[MAINT] Formatting _utils (#3614)
* update black config

* update black config

* make config more readable

* update pre-commit config

* run pre commit

* flag dead code

* apply sourcery refactoring

* format f strings

* run pre commit

* update CI

* move import

* Apply suggestions from code review

Co-authored-by: Yasmin <63292494+ymzayek@users.noreply.github.com>

* Apply suggestions from code review

* Apply suggestions from code review

* update pre-commit config

* update pre-commit config

* run precommit and fix flake8

* rm unused variables

* Update nilearn/_utils/glm.py

* update CI

* fix flake8

* fix failing tests

* typo

* fix

* Apply suggestions from code review

Co-authored-by: Yasmin <63292494+ymzayek@users.noreply.github.com>

* fic C?

* rm backslash

* fixes

* fix

* black

* lint

* lint

* pep8

* isort

---------

Co-authored-by: Yasmin <63292494+ymzayek@users.noreply.github.com>

--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -40,6 +40,7 @@ jobs:
           flake8 --verbose \
             examples/0[0234567]* \
             maint_tools \
+            nilearn/_utils \
             nilearn/connectome \
             nilearn/de* \
             nilearn/glm \
