--- a/.github/workflows/isort.yml
+++ b/.github/workflows/isort.yml
@@ -33,6 +33,7 @@ jobs:
           isort --diff --check --settings-path pyproject.toml \
             examples/0[0234567]* \
             maint_tools \
+            nilearn/_utils \
             nilearn/connectome \
             nilearn/de* \
             nilearn/glm \
