--- a/pyproject.toml
+++ b/pyproject.toml
@@ -108,6 +108,7 @@ include = """
   | maint_tools/.*py
   | nilearn/connectome/.*py
   | nilearn/dec.*
+  | nilearn/_utils/.*py$
   | nilearn/glm/.*py
   | nilearn/image/.*py
   | nilearn/input_data/.*py
@@ -123,6 +124,11 @@ include = """
 extend-exclude =  """
 (
   nilearn/externals
+  | nilearn/_utils/__init__.py
+  | nilearn/_utils/data_gen.py
+  | nilearn/_utils/docs.py
+  | nilearn/_utils/helpers.py
+  | nilearn/_utils/tests/test_data_gen.py
   | examples/.*/.*3d_map_to_surface_projection.py
   | examples/.*/.*demo_glass_brain.py
   | examples/.*/.*demo_glass_brain_extensive.py
