--- a/.github/workflows/isort.yml
+++ b/.github/workflows/isort.yml
@@ -35,6 +35,7 @@ jobs:
             maint_tools \
             nilearn/_utils \
             nilearn/connectome \
+            nilearn/datasets \
             nilearn/de* \
             nilearn/glm \
             nilearn/image \
