Run pytest from different directory

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,6 +39,8 @@ jobs:
     displayName: 'Install dependencies'
 
   - script: |
+      mkdir temp
+      cd temp
       python -m pytest --pyargs nilearn --cov-report=xml --cov=nilearn --cov-append --junitxml=test-results.xml
     displayName: 'test'
 
