[MAINT] Format nilearn/plotting: apply isort and fix flake8 errors (#3648)
* apply isort

* apply isort

* apply pyupgrade

* flake8 fix

* [DATALAD] Recorded changes

* [DATALAD] Recorded changes

* [DATALAD] Recorded changes

* fix typos

* fix fixtures

* rename fixture

* Update nilearn/plotting/html_stat_map.py

Co-authored-by: Yasmin <63292494+ymzayek@users.noreply.github.com>

* Update nilearn/plotting/img_plotting.py

Co-authored-by: Yasmin <63292494+ymzayek@users.noreply.github.com>

* Update nilearn/plotting/surf_plotting.py

Co-authored-by: Yasmin <63292494+ymzayek@users.noreply.github.com>

* Update nilearn/plotting/img_plotting.py

Co-authored-by: Yasmin <63292494+ymzayek@users.noreply.github.com>

* [DATALAD] Recorded changes

* [DATALAD] Recorded changes

* lint

* fix test

* fix tests

* fix isort

* fix catch

* move fixtures

* revert cfg change

* isort

* isort

* rm old imports

* merge lines

* try skipping fixture import if matplotlib is missing

* keep all fixtures in conftest.py

* stringify parameters in error message

---------

Co-authored-by: Yasmin <63292494+ymzayek@users.noreply.github.com>

--- a/.github/workflows/isort.yml
+++ b/.github/workflows/isort.yml
@@ -43,6 +43,7 @@ jobs:
             nilearn/input_data \
             nilearn/maskers \
             nilearn/mass_univariate \
+            nilearn/plotting \
             nilearn/regions \
             nilearn/rerporting \
             nilearn/surface \
