fix isort and flaek8 issues

--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -36,8 +36,4 @@ jobs:
 
       - name: "Run Flake8 on whole file"
         shell: bash {0}
-        run: |
-          flake8 --verbose \
-            examples/0[0234567]* \
-            maint_tools \
-            nilearn
+        run: flake8 --verbose .
