--- a/.github/workflows/isort.yml
+++ b/.github/workflows/isort.yml
@@ -32,4 +32,5 @@ jobs:
         run: isort --diff --check --settings-path pyproject.toml \
             examples/0[0234567]* \
             maint_tools \
-            nilearn
+            nilearn \
+            doc
