fix remaining isort issues

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,6 +62,7 @@ doc = [
 	"flake8-docstrings",
 	"black",
 	"furo",
+  "isort",
 	"memory_profiler",  # measuring memory during docs building
 	"mkl",
 	"myst-parser",
