--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -31,8 +31,7 @@ jobs:
 
       - name: "Install Flake8"
         shell: bash {0}
-        run: |
-          python -m pip install --upgrade pip flake8 flake8-docstrings
+        run: python -m pip install --upgrade pip flake8 flake8-docstrings
 
       - name: "Run Flake8 on whole file"
         shell: bash {0}
