--- a/.github/workflows/isort.yml
+++ b/.github/workflows/isort.yml
@@ -25,12 +25,12 @@ jobs:
 
       - name: "Install isort"
         shell: bash {0}
-        run: |
-          python -m pip install --upgrade pip isort
+        run: python -m pip install --upgrade pip isort
 
       - name: "Run isort"
-        run: isort --diff --check --settings-path pyproject.toml \
-            examples/0[0234567]* \
-            maint_tools \
-            nilearn \
-            doc
+        run: |
+            isort --diff --check --settings-path pyproject.toml \
+              examples/0[0234567]* \
+              maint_tools \
+              nilearn \
+              doc
