--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,6 +12,7 @@ files: |
         | .*toml
         | .*yaml
         | .*yml
+        | \.git-blame.*
         | AUTHORS.rst
         | CONTRIBUTING.rst
         | LICENSE
