[MAINT] add workflow to check for f strings (#3759)
* add workflow for flynt

* configure and run flynt

* flake8

* Update .github/workflows/f_strings.yml

Co-authored-by: Yasmin <63292494+ymzayek@users.noreply.github.com>

* Update nilearn/_utils/data_gen.py

Co-authored-by: bthirion <bertrand.thirion@inria.fr>

* pre-commit hooks auto-update (#3764)

Co-authored-by: Remi-Gau <Remi-Gau@users.noreply.github.com>

* [DOC] update changelog and git blame ignore (#3755)

* update git-blame-ignore

* update changelog

* fix

* update ignore

* fix regex escape

* flake8

* use list and not set

* simplify rev file

* rm spaces

* pragmatism wins

* rm import

* reset plotting files

* [FIX] Change error string to match scikit-learn `InvalidParameterError` message (#3763)

* Modify ValueError string

* Warning based on sklearn version

* relax regex for warning on sanitize reorder error (#3766)

---------

Co-authored-by: Yasmin <63292494+ymzayek@users.noreply.github.com>
Co-authored-by: bthirion <bertrand.thirion@inria.fr>
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
Co-authored-by: Remi-Gau <Remi-Gau@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -183,3 +183,6 @@ junit_family = "xunit2"
 [tool.codespell]
 skip = "./.git,plotly-gl3d-latest.min.js,jquery.min.js,localizer_behavioural.tsv,.mypy_cache,env,venv,./doc/auto_examples"
 ignore-words = ".github/codespell_ignore_words.txt"
+
+[tool.flynt]
+exclude = "tempita"
