--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -121,4 +121,4 @@ repos:
     hooks:
       - id: flake8
         args: [--verbose]
-        additional_dependencies: [flake8-docstrings]
+        additional_dependencies: [flake8-docstrings, flake8-use-fstring]
