cancel previous test install workflows

--- a/.github/workflows/testing_install.yml
+++ b/.github/workflows/testing_install.yml
@@ -8,6 +8,10 @@ on:
     branches:
       - '*'
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   test_install:
     runs-on: ${{ matrix.os }}
