rm azure pipeline tests

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -100,6 +100,8 @@ jobs:
         run: ./build_tools/github/test.sh
         name: 'Run tests'
       - uses: codecov/codecov-action@v3
+        with:
+          flags: ${{ matrix.os }}_${{ matrix.python-version }}
         if: success()
         name: 'Upload coverage to CodeCov'
 
