[REF] Fix more f strings (#3776)
* f stringify

* f strings in examples

* f string fix

* fix f strings

* Update pyproject.toml

* [MAINT] test install and run windows tests with github actions (#3780)

* try testing install with gh

* try testing on windows

* cancel previous test install workflows

* rm azure pipeline tests

* rm azure badge

* update doc

* Update examples/04_glm_first_level/plot_localizer_surface_analysis.py

Co-authored-by: bthirion <bertrand.thirion@inria.fr>

---------

Co-authored-by: bthirion <bertrand.thirion@inria.fr>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -149,4 +149,4 @@ repos:
     hooks:
       - id: flake8
         args: ["--config", ".flake8", "--verbose"]
-        additional_dependencies: [flake8-docstrings]
+        additional_dependencies: [flake8-docstrings, flake8-use-fstring]
