update files before doc build

--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -258,6 +258,11 @@ jobs:
            nilearn_data/spm_multimodal_fmri
           key: v1-spm_multimodal_fmri-${{ hashFiles('week_num') }}
 
+      # Update the authors file and the names file
+      # in case a contributor has been added to citation.cff
+      # but did not run the maint_tools/citation_cff_maint.py script.
+      - name: update AUTHORS.rst and doc/changes/names.rst
+        run: python maint_tools/citation_cff_maint.py
       # Run the doc build. If no data is restored in previous steps, the data
       # will be downloaded during the build (this only applies for full builds;
       # no data is downloaded for partial builds).
