--- a/.github/workflows/update_authors.yml
+++ b/.github/workflows/update_authors.yml
@@ -20,6 +20,9 @@ jobs:
               with:
                 python-version: "3.11"
 
+            - name: install dependencies
+              run: python -m pip install --upgrade pip ruamel.yaml
+
             - name: update AUTHORS.rst and doc/changes/names.rst
               run: python maint_tools/citation_cff_maint.py
 
